--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@mongodb-js/saslprep": "^1.2.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.12.1"
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
+    "react-router-dom": "^7.5.1"
   }
 }
